@@ -1,3 +1,8 @@
+2010-04-05  Per Bothner  <per@bothner.com>
+
+	* XSLT.java (parse): Set compilation state to BODY_PARSED
+	to avoid confusion if Compilation.process is called.
+
 2009-09-15  Per Bothner  <per@bothner.com>
 
 	* XSLT.java (runStylesheet): Update for commandLineArgArray moved.
